Updates/Clarification on Module 5(Projects)

--- a/Module_5_Project_1_NERSC_DOE_HPC_BOOTCAMP2025.Fusion_Energy_HPC_Analysis.ipynb
+++ b/Module_5_Project_1_NERSC_DOE_HPC_BOOTCAMP2025.Fusion_Energy_HPC_Analysis.ipynb
@@ -10,7 +10,7 @@
     "### National Energy Research Scientific Computing Center\n",
     "#### Introduction to High Performance Computing Bootcamp 2025\n",
     "\n",
-    "# Module 5: Project -HPC Workload and Energy Analysis in Fusion Research"
+    "# Module 5: Project 1-HPC Workload and Energy Analysis in Fusion Research"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "id": "55b2dc22-92bc-4253-a4b1-94b1af8ce5a9",
    "metadata": {},
    "source": [
-    "# Module 5 Project 1 — Fusion Energy: Performance & Energy Trade-off Analysis\n",
+    "# Module 5 Project 1 — Fusion Energy: Performance & Energy Trade-off Analysis for Fusion Workload HPC Center\n",
     "\n",
     "## Project Overview\n",
     "\n",
@@ -56,20 +56,22 @@
     "\n",
     "You may choose **one of two thinking tracks**:\n",
     "\n",
-    "**Option A — Theoretical Workflow Efficiency Analysis**\n",
+    "**Option A — Theoretical Workflow Efficiency Analysis for Fusion Workload HPC Center**\n",
     "- Compare three types of fusion workloads (e.g., large-scale plasma simulation, diagnostics data analysis, ML-based prediction).\n",
     "- For each, reason through:\n",
     "  - Likely compute architecture (CPU vs GPU mix, memory needs).\n",
     "  - Expected scaling characteristics and their impact on efficiency.\n",
     "  - Theoretical performance per watt compared to current DOE supercomputers.\n",
-    "- Summarize how you would prioritize hardware and scheduling for maximum throughput.\n",
+    "- Overall, Summarize how you would prioritize hardware and scheduling for maximum throughput that will impact your overall system design focusing on Fusion Energy Workloads\n",
     "\n",
-    "**Option B — Theoretical Scheduling & Capacity Planning**\n",
+    "**Option B — Theoretical Scheduling & Capacity Planning for Fusion HPC Center that prioritizes Fusion with other workloads**\n",
     "- Given a fixed facility power budget and an assumed mix of fusion jobs, propose:\n",
     "  - A scheduling approach that balances peak performance and energy efficiency.\n",
     "  - Strategies for aligning with DOE’s sustainability and cost goals.\n",
     "- Consider trade-offs between throughput, fairness, and energy footprint.\n",
     "- Justify your decisions using reasoning from Modules 1–4.\n",
+    "- - Overall, Summarize how you would prioritize hardware and scheduling for maximum throughput that will impact your overall system design that focuses on prioritizing Fusion Workloads with other HPC Workloads.\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -79,7 +81,7 @@
     "- Reasoning about **trade-offs** without requiring live experiments.\n",
     "- Communicating recommendations in **clear, evidence-backed language**.\n",
     "\n",
-    "> Remember: This is about *how you think* as an HPC strategist, not just what the numbers say. Focus on clarity, logical flow, and alignment with DOE mission priorities.\n"
+    "> Remember: This is about *how you think* as an HPC strategist and consultant, not just what the numbers say. Focus on clarity, logical flow, and alignment with DOE mission priorities.\n"
    ]
   },
   {
@@ -760,6 +762,8 @@
     "## Purpose\n",
     "Synthesize what you learned in Modules 1–4 to reason about **which fusion workloads** (simulation, diagnostics analysis, ML prediction) benefit most from which **architectures** (CPU, GPU, hybrid) and **why**—with an emphasis on **efficiency** (performance per watt) on 2025-class machines.\n",
     "\n",
+    "You will utilize your previous learning modules on power, performance, and parallelization to design a **Fusion Workload HPC Center**.\n",
+    "\n",
     "---\n",
     "\n",
     "## Inputs & Assumptions (choose or adjust)\n",
@@ -815,7 +819,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Analysis Prompts (answer succinctly)\n",
+    "## Analysis Considerations and Prompts (answer succinctly)\n",
     "1. **Scaling impact:** Where does strong-scaling hit diminishing returns and how does that change Perf/W?  \n",
     "2. **Precision & kernels:** Could mixed precision (FP16/BF16) or kernel fusion safely improve Perf/W for any workload? Why/why not?  \n",
     "3. **Data motion:** For diagnostics, what IO/co-location tactics (burst buffers, columnar formats, on-node preproc) raise Perf/W without changing the algorithm?  \n",
@@ -830,20 +834,134 @@
     "\n",
     "---\n",
     "\n",
-    "## Deliverables\n",
-    "- 1–page memo with your filled tables, Perf/W reasoning, and a **clear priority order** for hardware targeting.\n",
-    "- A small figure (optional) ranking workloads by **expected Perf/W** (bar chart or ladder sketch).\n",
+    "---\n",
+    "## Design Prompts for Consideration\n",
+    "1. **Compute Mix:** What CPU/GPU/hybrid ratio will support the workloads’ Perf/W targets?\n",
     "\n",
-    "## Rubric (100 pts)\n",
-    "- Assumptions clarity (20) • Architecture fit correctness (20) • Perf/W reasoning (30) • Scheduling implications (20) • Presentation (10)\n",
+    "2. **Cooling Strategy:** Air vs. direct liquid vs. immersion—justify based on node power envelopes and density.\n",
     "\n",
-    "> Stretch: Contrast two platforms (e.g., Frontier vs Aurora) for the **same** workload and explain any Perf/W crossover.\n"
+    "3. **Network Fabric:** Which topology (dragonfly, fat-tree, Slingshot, Infiniband) meets your latency & bandwidth needs?\n",
+    "\n",
+    "4. **Storage Architecture:** How will you handle diagnostics’ IO load and ML’s dataset streaming?\n",
+    "\n",
+    "5. **Energy Optimization:** How will you schedule high-energy workloads relative to peak pricing?\n",
+    "\n",
+    "6. **Scalability:** How will your design adapt as fusion workloads scale by 2–5×?\n",
+    "\n",
+    "\n",
+    "> Stretch: Contrast two platforms (e.g., Frontier vs Aurora or Perlmutter) for the **same** workload and explain any Perf/W crossover.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f778211-2187-46cd-afdc-f883c18a7f16",
+   "metadata": {},
+   "source": [
+    "# 🗓️ Project Track B — HPC Data Center Design & Theoretical Scheduling for a Fusion-Priority Facility\n",
+    "\n",
+    "## Purpose\n",
+    "Design a **next-generation HPC data center** that both:\n",
+    "1. **Meets the DOE mission requirement** of allocating **40% of total compute capacity** to **fusion energy workloads**.\n",
+    "2. **Efficiently accommodates** other DOE science workloads while maximizing **science per kWh** under a **12 MW facility power cap**.\n",
+    "\n",
+    "Your design must balance:\n",
+    "- **System architecture choices** (CPU/GPU/Hybrid/Other architectures, node counts, memory, interconnect topology, cooling solutions).\n",
+    "- **Scheduling policies** (fusion-priority allocation, energy efficiency, fairness across science areas).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Inputs & Assumptions (choose or adjust)\n",
+    "- **Facility power cap:** 12 MW (peak).\n",
+    "- **Electricity price:** $0.10/kWh (flat) or optional time-of-day pricing for complexity.\n",
+    "- **Fusion workload share:** 40% of total annual compute cycles (core-hours or GPU-hours).\n",
+    "- **Other workloads:** 60% capacity across ASCR, BES, BER, HEP, NP, ARDAP.\n",
+    "- **Node types & specs:** Choose realistic node configurations from Modules 2–3 data.\n",
+    "- **Job descriptors** (example schema):\n",
+    "  - \\( \\text{nodes},\\ \\text{power/node (kW)},\\ \\text{runtime (h)},\\ \\text{deadline (h)},\\ \\text{priority},\\ \\text{preemption?} \\)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Worksheet B1 — System & Job Class Summaries\n",
+    "Define **system-level design choices** and 3–5 representative job classes (at least two fusion).\n",
+    "\n",
+    "| Class | Science area / workload | Nodes | Power/node (kW) | Runtime (h) | Preemptible? | Priority | Science units/job (define) |\n",
+    "|---|---|---:|---:|---:|---|---|---:|\n",
+    "| F1 | Fusion simulation (gyrokinetic) | 512 | 6.8 | 14 | No | High (Fusion) | 1 device-scale run |\n",
+    "| F2 | Fusion ML disruption prediction | 256 | 7.5 | 8 | Yes | High (Fusion) | epochs on disruption dataset |\n",
+    "| S1 | BES materials discovery | 128 | 5.0 | 6 | Yes | Med | candidate materials screened |\n",
+    "| S2 | BER climate impact analysis | 64 | 4.2 | 4 | Yes | Med | N simulations processed |\n",
+    "| S3 | HEP event reconstruction | 192 | 6.3 | 10 | No | Med | events reconstructed |\n",
+    "\n",
+    "**Per-job energy**\n",
+    "$$\n",
+    "\\mathrm{kWh}=\\mathrm{Runtime\\ (h)}\\times\\mathrm{Nodes}\\times\\mathrm{Power\\ per\\ node\\ (kW)}\n",
+    "$$\n",
+    "\n",
+    "**Science per kWh**\n",
+    "$$\n",
+    "\\mathrm{Science/kWh}=\\frac{\\text{Science units/job}}{\\mathrm{kWh}}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## System Design Considerations\n",
+    "When defining your HPC data center design, address:\n",
+    "- **Architecture mix:** % of GPU, CPU, Hybrid, and emerging architectures (e.g., Quantum, FPGA).\n",
+    "- **Memory hierarchy:** Per-node memory and total system RAM allocation.\n",
+    "- **Interconnect topology:** Bandwidth and latency targets for fusion-heavy workflows.\n",
+    "- **Cooling & power delivery:** Thermal design power budget and liquid vs. air cooling trade-offs.\n",
+    "- **Facility layout:** Rack density, power distribution, and network routing.\n",
+    "- **Storage subsystem:** Bandwidth & capacity for fusion diagnostics vs. other workloads.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Scheduling Policy Sketches\n",
+    "1. **Fusion-first fairness** — Reserve 40% for fusion; schedule non-fusion in remaining slots.\n",
+    "2. **Energy-aware with fusion guarantee** — Within the 40% fusion share, prioritize highest Science/kWh jobs; fill unused fusion slots with non-fusion backfill.\n",
+    "3. **Mission-weighted blended score** —  \n",
+    "   \\( \\alpha\\cdot\\text{Mission Priority}+\\beta\\cdot\\text{Science/kWh}-\\gamma\\cdot\\text{Power draw} \\)  \n",
+    "   where fusion jobs have a baseline mission weighting.\n",
+    "\n",
+    "> Include fairness guardrails: per-project share limits, maximum wait times, or aging boosts.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Worksheet B2 — Weekly Scheduling Plan Under a 12 MW Cap\n",
+    "Build a **text grid** or table tracking both fusion allocation and total power use.\n",
+    "\n",
+    "| Time block | Available MW | Scheduled classes | Fusion share (%) | Est. MW draw | Notes (preemption, backfill) |\n",
+    "|---|---:|---|---:|---:|---|\n",
+    "| Day 1 AM | 12 | F1 + S1 backfill | 45% | 11.8 | Peak demand; fusion slot fully used |\n",
+    "| Day 1 PM | 12 | F2 + S2 | 40% | 9.4 | Mid-price window |\n",
+    "| Day 2 AM | 12 | F1 + S3 backfill | 42% | 11.6 | Preemptible non-fusion backfill |\n",
+    "| … |  |  |  |  |  |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Analysis Prompts\n",
+    "1. **Architecture & scheduling link:** How does your hardware design enable your scheduling strategy?\n",
+    "2. **Fusion allocation impact:** How does enforcing 40% fusion allocation affect system-wide Science/kWh?\n",
+    "3. **Trade-offs:** Does fusion prioritization reduce throughput for other science areas?\n",
+    "4. **Peak-shaving:** Which workloads are best to move out of peak power windows?\n",
+    "5. **Backfill efficiency:** Is unused capacity being filled effectively without hurting fusion targets?\n",
+    "6. **Sensitivity:** How do ±10% changes in job runtime or power draw affect your design and schedule?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Recommendation\n",
+    "- State your **recommended system architecture** and **scheduling policy**.\n",
+    "- Provide **2–3 justifications** based on fusion mission alignment, energy efficiency, and fairness.\n",
+    "- Identify the metrics you’d track in production: queue age, MW utilization, Science/kWh, and fusion allocation compliance.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "> **Egoal:** Incorporate **time-of-day energy pricing** and/or **carbon-aware scheduling** to adjust workload placement dynamically.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e40e1c59-301b-4b15-96c6-e80a44791373",
+   "id": "da4ba298-d4b7-45a1-9d72-df2cc2b9d8ce",
    "metadata": {},
    "outputs": [],
    "source": []
